fixes playlists style issue, save playlist visibility, fixes remove track button for mobile devices

--- a/src/components/now-playing/playlist-saver/playlist-saver.less
+++ b/src/components/now-playing/playlist-saver/playlist-saver.less
@@ -1,7 +1,8 @@
 @import url(../../../css/echoes-variables.less);
 
 .playlist-saver {
-
+	padding-top: 5rem;
+	
 	input {
 		background: #2b2d30;
 	    border: none;
