--- a/src/components/user-playlists/user-playlists.less
+++ b/src/components/user-playlists/user-playlists.less
@@ -62,6 +62,7 @@
 	.user-playlists {
 		padding-top: 13rem;
 		padding-left: .5rem;
+		padding-bottom: 3rem;
 		
 		nav.nav {
 			margin-left: @drawer-width;
