--- a/src/core/components/youtube-components/youtube-playlist/youtube-playlist.less
+++ b/src/core/components/youtube-components/youtube-playlist/youtube-playlist.less
@@ -1,6 +1,8 @@
 @import url(../../../../css/core/global.less);
 
 .youtube-playlist-item {
+	width: 28.2rem;
+	
 	.thumbnail aside {
 		position: absolute;
 		right: 0;
